--- a/Mini_Project_Logistic_Regression.ipynb
+++ b/Mini_Project_Logistic_Regression.ipynb
@@ -6,17 +6,7 @@
     "hide": true
    },
    "source": [
-    "# Classification\n",
-    "$$\n",
-    "\\renewcommand{\\like}{{\\cal L}}\n",
-    "\\renewcommand{\\loglike}{{\\ell}}\n",
-    "\\renewcommand{\\err}{{\\cal E}}\n",
-    "\\renewcommand{\\dat}{{\\cal D}}\n",
-    "\\renewcommand{\\hyp}{{\\cal H}}\n",
-    "\\renewcommand{\\Ex}[2]{E_{#1}[#2]}\n",
-    "\\renewcommand{\\x}{{\\mathbf x}}\n",
-    "\\renewcommand{\\v}[1]{{\\mathbf #1}}\n",
-    "$$"
+    "# Classification\n"
    ]
   },
   {
@@ -34,7 +24,7 @@
     "\n",
     "There are different ways of making classifications. One idea is shown schematically in the image below, where we find a line that divides \"things\" of two different types in a 2-dimensional feature space. The classification show in the figure below is an example of a maximum-margin classifier where construct a decision boundary that is far as possible away from both classes of points. The fact that a line can be drawn to separate the two classes makes the problem *linearly separable*. Support Vector Machines (SVM) are an example of a maximum-margin classifier.\n",
     "\n",
-    "![Splitting using a single line](http://localhost:8888/files/Desktop/Springboard/Machine%20Learning/Projects/logistic_regression/images/onelinesplit.png)\n",
+    "![Splitting using a single line](images/onelinesplit.png)\n",
     "\n"
    ]
   },
