--- a/Mini_Project_Linear_Regression.ipynb
+++ b/Mini_Project_Linear_Regression.ipynb
@@ -2832,7 +2832,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exercise 5:\n"
+    "#### Exercise 5:\n",
+    "\n",
+    "In this simple linear regression model, the F-statistic (175.1) is equal to t-statics squared (-13.233)^2."
    ]
   },
   {
