--- a/Mini_Project_Logistic_Regression.ipynb
+++ b/Mini_Project_Logistic_Regression.ipynb
@@ -152,7 +152,7 @@
     "### Checkup Exercise Set I\n",
     "\n",
     "**Exercise:** Create a scatter plot of Weight vs. Height\n",
-    "<span style=\"color:blue\">some *This is Blue italic.* text</span>\n",
+    "<p>Some Markdown text with <span style=\"color:blue\">some <em>blue</em> text</span>.</p>\n",
     "**Exercise:** Color the points differently by Gender"
    ]
   },
